Added documentation for admin authentication (#16)
